<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LifeActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:visibility="invisible"
        android:id="@+id/frame1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/reparationEdit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="price"
                android:hint="@string/reparation"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/statusEdit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="boolean"
                android:hint="@string/true_false"
                android:inputType="text" />

            <EditText
                android:id="@+id/priceEdit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="price"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/nameEdit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save3"/>
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>